--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,16 +1,23 @@
-on: push
 name: 🚀 Deploy website on push
+
+on:
+  push:
+    branches:
+      - master
+
 jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
+
     steps:
       - name: 🚚 Get latest code
         uses: actions/checkout@v4
 
-      - name: 📂 Sync files
+      - name: 📂 Sync files via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.6
         with:
-          server: ftp.samkirkland.com
-          username: simonnyblom.com
-          password: ${{ secrets.ftp_password }}
+          server: simmonnyblom.com
+          username: simonnyblom.com # or whatever your FTP username is
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /public_html/
